# supersonik

./: CMakeLists.txt  README.md  uk.co.piggz.harbour-supersonik.desktop  uk.co.piggz.supersonik.desktop
.github/workflows/: flatpak.yml
rpm/: harbour-supersonik.spec
src/: CMakeLists.txt  Helper.cpp  Helper.h  fileio.cpp  fileio.h  main.cpp
src/qml/: Main.qml
src/qml/components/: AlbumArt.qml  AlbumItem.qml  ArtistItem.qml  GenreItem.qml  MediaPlayer.qml  OfflineFiles.qml  RadioItem.qml
src/qml/pages/: MusicFeed.qml  SettingsPage.qml
